<resources>
    <string name="app_name">BankSystem</string>

    <!--    sign up screen start      -->
    <string name="login_view_sign_up">Don’t have an account? Sign up</string>
    <string name="create_a_onebank_account">Create A OneBank\nAccount</string>
    <string name="fill_in_your_information">Please fill in your information\nto create your account</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">Id Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="terms_and_conditions">By creating an account, you agree to our Terms and Conditions.</string>
    <string name="have_an_account">already have an account ? Sign In</string>
    <string name="sign_up">Sign Up</string>
    <!--    sign up screen end     -->

    <!--    navigation view screen start     -->
    <string name="notifications">Notifications</string>
    <string name="account_management">Account Management</string>
    <string name="personal_information">Personal Information</string>
    <string name="sharing">Sharing</string>
    <string name="settings">Settings</string>
    <!--    navigation view screen end     -->

    <!--    bottom screen start     -->
    <string name="home">Home</string>
    <string name="pay">Pay</string>
    <string name="loan">Loan</string>
    <!--    bottom screen end     -->

    <!--    nav header screen start     -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_number_nav_header">%account_number</string>
    <string name="username_nav_header">%username</string>
    <string name="total_balance">Total Balance</string>
    <string name="var_total_balance">%s JD</string>
    <string name="home_text_msg">Earn interest on the \nClassic Saving Account</string>
    <string name="view_all">View all</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="the_total_amount_for_the_loan_is">the total amount for the loan is :</string>
    <!--    nav header screen end     -->


</resources>